<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/add_todo_dialog_container"
    android:padding="10dp"
    tools:context=".presentation.home.dialog.AddToDoDialog">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/todo_title_background"
        android:hint="@string/todo_title_hint"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/primaryTextColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/todo_content_background"
        android:hint="@string/todo_content_hint"
        android:inputType="textMultiLine"
        android:maxLines="15"
        android:padding="10dp"
        android:textColor="@color/primaryTextColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleEditText" />

<!--    <CheckBox-->
<!--        android:id="@+id/alarmCheckBox"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:text="@string/alarm_checkbox"-->
<!--        android:textColor="@color/primaryTextColor"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/contentEditText" />-->

<!--    <TimePicker-->
<!--        android:id="@+id/alarmTimePicker"-->
<!--        android:layout_width="320dp"-->
<!--        android:layout_height="150dp"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:theme="@style/AlarmTimePicker"-->
<!--        android:timePickerMode="spinner"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/alarmCheckBox"-->
<!--        tools:visibility="visible" />-->

    <Button
        android:id="@+id/addToDoButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/primaryTextColor"
        android:text="@string/add_todo"
        android:textColor="@color/primaryLightColor"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancelButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentEditText" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/primaryTextColor"
        android:text="@string/cancel"
        android:textColor="@color/primaryLightColor"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/addToDoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addToDoButton"
        app:layout_constraintTop_toTopOf="@id/addToDoButton" />

</androidx.constraintlayout.widget.ConstraintLayout>