<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/add_todo_dialog_container"
    android:padding="10dp">

    <Button
        android:id="@+id/editButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/ic_baseline_create_24"
        app:layout_constraintBottom_toTopOf="@id/titleEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toBottomOf="@id/editButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/editButton" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/todo_title_background"
        android:hint="@string/todo_title_hint"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editButton" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/todo_content_background"
        android:hint="@string/todo_content_hint"
        android:inputType="textMultiLine"
        android:maxLines="15"
        android:padding="10dp"
        android:textColor="@color/primaryTextColor"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleEditText" />

    <CheckBox
        android:id="@+id/alarmCheckBox"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/alarm_checkbox"
        android:textColor="@color/primaryTextColor"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentEditText"
        tools:visibility="visible" />

    <TimePicker
        android:id="@+id/alarmTimePicker"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:timePickerMode="spinner"
        android:theme="@style/AlarmTimePicker"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarmCheckBox"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>